--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
